--- a/_layouts/common.html
+++ b/_layouts/common.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="/assets/css/style.css">
       <link rel="stylesheet" href="/assets/css/type-scale.css">
       <link rel="stylesheet" href="/assets/css/color-scale.css">
+      <title>{{page.title}}</title>
     </head>
     <body>
         {{content}}
