--- a/assets/css/type-scale.css
+++ b/assets/css/type-scale.css
@@ -22,7 +22,7 @@ ul {
 html,body {
   font-weight: 400;
   font-size: 16px;
-  line-height: 32px;
+  line-height: 1.75;
 }
 
 .u-body-extra-small { font-size: 14px; line-height:24px }
