--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,5 +1,5 @@
 
-<div class="u-pad card u-cols-4 u-margins">
+<div class="u-cols-4 u-margins">
     <a href="{%if include.url%}{{include.url}}{%else%}{{include.github}}{%endif%}"><h3 class="u-highlight-medium text-gray-3">{{include.title}}</h3></a>
   <div>
       {{include.desc}}
