--- a/_layout/header.html
+++ b/_layout/header.html
@@ -3,6 +3,7 @@
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
+    <li><a href="/resume.pdf">Resume</a></li>
   </ul>
   <img src="/assets/hamburger.svg" id="menu-icon">
 </nav>
